# isbn_scanner

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  filetypes.json  indicators.hpp  isbn_scanner  isbn_scanner.cpp  isbn_scanner.hpp  isbn_test.cpp  scanner.toml  util.hpp
cmake/: Findluajit.cmake
src/: book.hpp  lockable.hpp  main.cpp  main.hpp  rate_limited.hpp  test.hpp  thread_safe_file.hpp  util.hpp  version.hpp
